--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body class="background">
-  <div>
-    <img src="./images/reflexpress-logo-small-notext-darksmile.png"
-  </div>
+    <div class="center-content">
+        <img class="center" src="./images/reflexpress-logo-small-notext-darksmile.png" />
+    </div>  
 </body>
 
 </html>
