--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 
 <body class="background">
     <div class="center-content">
-        <img class="center" src="./images/reflexpress-logo-small-notext-darksmile.png" />
+        <img class="smiley" src="./images/reflexpress-logo-small-notext-darksmile.png" />
     </div>  
+    <div class="center-content">
+        <form action="/" method="post">
+            <label for="uuid">UUID</label><input type="text" name="uuid" />
+            <label for="name">Button name</label><input type="text" name="name" />
+            <label for="recipient">Friend's username</label><input type="text" name="recipient" />
+            <label for="short">Messages or emojis (short press)</label><input type="text" name="short" />
+            <label for="long">Gifs search (long press)</label><input type="text" name="long" />
+        </form>
+    </div>
 </body>
 
 </html>
